--- a/bin/gui/view/ViewCaixa.fxml
+++ b/bin/gui/view/ViewCaixa.fxml
@@ -17,66 +17,126 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1059.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="589.0" prefWidth="1190.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
    <children>
-      <Line endX="898.0" endY="-1.0000076293945312" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
-      <Button fx:id="btAbrirFecharCaixa" layoutX="12.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="46.0" prefWidth="150.0">
+      <Line endX="1029.0" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
+      <Button fx:id="btAbrirFecharCaixa" layoutX="43.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="69.0" prefWidth="88.0">
          <font>
             <Font name="System Bold" size="15.0" />
-         </font></Button>
-      <Line endX="948.0" layoutX="111.0" layoutY="137.0" startX="-110.0" stroke="#827f7f" />
+         </font>
+         <graphic>
+            <ImageView fx:id="ivCaixa" fitHeight="59.0" fitWidth="99.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_open_sign_96px.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Line endX="1079.0" layoutX="111.0" layoutY="137.0" startX="-110.0" stroke="#827f7f" />
       <Line endX="100.0" endY="455.0" layoutX="71.0" layoutY="134.0" startX="100.0" startY="-98.0" stroke="#827f7f" />
-      <Label layoutX="14.0" layoutY="187.0" text="Cliente:" />
-      <Label layoutX="12.0" layoutY="251.0" text="Atendente:" />
-      <Label layoutX="12.0" layoutY="315.0" text="Data" />
+      <Label layoutX="44.0" layoutY="195.0" text="Cliente:" />
+      <Label layoutX="41.0" layoutY="261.0" text="Atendente:" />
+      <Label layoutX="45.0" layoutY="324.0" text="Data" />
       <ChoiceBox fx:id="cbFuncionario" layoutX="12.0" layoutY="279.0" prefWidth="150.0" />
       <DatePicker fx:id="dpData" layoutX="11.0" layoutY="342.0" prefHeight="25.0" prefWidth="150.0" />
       <TextField fx:id="tfValor" layoutX="12.0" layoutY="403.0" prefHeight="26.0" prefWidth="151.0" />
-      <Label layoutX="14.0" layoutY="376.0" text="Valor:" />
-      <Button fx:id="btEnviarTransacao" layoutX="78.0" layoutY="515.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar" />
-      <Label layoutX="28.0" layoutY="137.0" text="Adicione os valores" />
-      <Label layoutX="39.0" layoutY="154.0" text="Das transações" />
-      <TableView fx:id="tvTransacao" layoutX="172.0" layoutY="138.0" prefHeight="410.0" prefWidth="888.0">
+      <Label layoutX="43.0" layoutY="385.0" text="Valor:" />
+      <Button fx:id="btEnviarTransacao" layoutX="64.0" layoutY="515.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar">
+         <graphic>
+            <ImageView fitHeight="24.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_add_96px_1.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Label layoutX="28.0" layoutY="147.0" text="Adicione os valores" />
+      <Label layoutX="39.0" layoutY="164.0" text="Das transações" />
+      <TableView fx:id="tvTransacao" layoutX="172.0" layoutY="138.0" prefHeight="410.0" prefWidth="1007.0">
         <columns>
-          <TableColumn fx:id="colunaId" prefWidth="49.0" text="ID" />
-            <TableColumn fx:id="colunaCliente" prefWidth="188.0" text="Cliente" />
-            <TableColumn fx:id="colunaAtendente" prefWidth="150.0" text="Atendente" />
-            <TableColumn fx:id="colunaMeioPagamento" prefWidth="162.0" text="Meio de pagamento" />
-            <TableColumn fx:id="colunaValor" prefWidth="91.0" text="Valor" />
-            <TableColumn fx:id="colunaSelect" text="Excluir?" />
-            <TableColumn prefWidth="167.0" text="Column X">
+          <TableColumn fx:id="colunaId" prefWidth="64.0" text="ID">
                <graphic>
-                  <DatePicker fx:id="dpSelecao" editable="false" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="162.0" />
-               </graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_tags_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn fx:id="colunaCliente" prefWidth="174.00001525878906" text="Cliente">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_businesswoman_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn fx:id="colunaAtendente" prefWidth="150.0" text="Atendente">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_female_worker_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn fx:id="colunaMeioPagamento" prefWidth="193.0" text="Meio de pagamento">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_card_payment_40px_1.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn fx:id="colunaValor" prefWidth="91.0" text="Valor">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_money_40px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn fx:id="colunaSelect" prefWidth="133.0" text="Excluir?">
+               <graphic>
+                  <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../model/images/icons8_trash_48px.png" />
+                     </image>
+                  </ImageView>
+               </graphic></TableColumn>
+            <TableColumn prefWidth="200.0" text="Column X">
                <columns>
-                <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="165.0" sortable="false" text="Data" />
+                <TableColumn fx:id="colunaData" editable="false" minWidth="0.0" prefWidth="200.0" sortable="false" text="Data">
+                     <graphic>
+                        <ImageView fitHeight="26.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../model/images/icons8_calendar_48px.png" />
+                           </image>
+                        </ImageView>
+                     </graphic></TableColumn>
                </columns>
+               <graphic>
+                  <DatePicker fx:id="dpSelecao" editable="false" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="198.0" />
+               </graphic>
             </TableColumn>
         </columns>
       </TableView>
       <ChoiceBox fx:id="cbFormaPagamento" layoutX="11.0" layoutY="466.0" prefWidth="150.0" />
-      <Label layoutX="11.0" layoutY="439.0" text="Forma de pagamento" />
-      <Label layoutX="9.0" layoutY="3.0" text="Status do caixa:">
-         <font>
-            <Font size="20.0" />
-         </font>
-      </Label>
-      <Label fx:id="lbStatus" layoutX="179.0" layoutY="2.0" prefHeight="30.0" prefWidth="151.0" textFill="#10bf24">
-         <font>
-            <Font name="System Bold" size="20.0" />
-         </font>
-      </Label>
+      <Label layoutX="45.0" layoutY="447.0" text="Forma de pagamento" />
       <Label layoutX="192.0" layoutY="81.0" text="Dinheiro dado:" />
       <TextField fx:id="tfValorServico" layoutX="305.0" layoutY="49.0" prefHeight="25.0" prefWidth="79.0" />
       <Label layoutX="183.0" layoutY="52.0" text="Valor do serviço:" />
       <TextField fx:id="tfDinheiroDado" layoutX="305.0" layoutY="77.0" prefHeight="25.0" prefWidth="79.0" />
       <Label fx:id="lbTroco" layoutX="434.0" layoutY="69.0" text="Troco de: " />
-      <Button fx:id="btCalTroco" layoutX="394.0" layoutY="64.0" mnemonicParsing="false" onAction="#calculaTroco" prefHeight="16.0" prefWidth="13.0" text="=" />
-      <Line endX="943.0" layoutX="116.0" layoutY="548.0" startX="56.0" stroke="#827f7f" />
-      <Button fx:id="btExcluir" layoutX="184.0" layoutY="558.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="25.0" prefWidth="70.0" text="Excluir" />
+      <Button fx:id="btCalTroco" layoutX="394.0" layoutY="64.0" mnemonicParsing="false" onAction="#calculaTroco" prefHeight="25.0" prefWidth="31.0" text="=" />
+      <Line endX="1074.0" layoutX="116.0" layoutY="548.0" startX="56.0" stroke="#827f7f" />
+      <Button fx:id="btExcluir" layoutX="181.0" layoutY="553.0" mnemonicParsing="false" onAction="#excluirTransacao" prefHeight="30.0" prefWidth="79.0" text="Excluir">
+         <graphic>
+            <ImageView fitHeight="22.0" fitWidth="36.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_trash_48px.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
       <Label layoutX="271.0" layoutY="562.0" text="Excluir transações selecionadas" />
       <TextField fx:id="tfCliente" layoutX="12.0" layoutY="214.0" prefHeight="26.0" prefWidth="150.0" />
-      <GridPane layoutX="721.0" layoutY="50.0" prefHeight="65.0" prefWidth="403.0" vgap="10.0">
+      <GridPane layoutX="861.0" layoutY="50.0" prefHeight="65.0" prefWidth="403.0" vgap="10.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="241.0" minWidth="10.0" prefWidth="202.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="152.0" minWidth="0.0" prefWidth="34.0" />
@@ -151,7 +211,7 @@
             </Label>
          </children>
       </GridPane>
-      <GridPane layoutX="885.0" layoutY="555.0" prefHeight="30.0" prefWidth="164.0">
+      <GridPane layoutX="1014.0" layoutY="555.0" prefHeight="30.0" prefWidth="164.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="178.0" minWidth="10.0" prefWidth="114.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="114.0" minWidth="10.0" prefWidth="50.0" />
@@ -164,7 +224,7 @@
             <ProgressIndicator fx:id="piStatus" visible="false" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="btAjuda" layoutX="985.0" layoutY="3.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
+      <Button fx:id="btAjuda" layoutX="1110.0" layoutY="5.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
          <graphic>
             <ImageView fitHeight="19.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -173,5 +233,51 @@
             </ImageView>
          </graphic>
       </Button>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="191.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_businesswoman_48px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="256.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_female_worker_48px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="320.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_calendar_48px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="379.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_money_40px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="12.0" layoutY="443.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_card_payment_40px_1.png" />
+         </image>
+      </ImageView>
+      <GridPane layoutX="12.0" layoutY="2.0" prefHeight="32.0" prefWidth="273.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="194.0" minWidth="10.0" prefWidth="161.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="168.0" minWidth="10.0" prefWidth="136.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label fx:id="lbStatus" prefHeight="33.0" prefWidth="126.0" textFill="#10bf24" GridPane.columnIndex="1">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label prefHeight="30.0" prefWidth="140.0" text="Status do caixa:">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
